Fixed so suite is now visible if selecting testplan view Fixed layout for panels

--- a/src/TestCaseExplorer/css/app.css
+++ b/src/TestCaseExplorer/css/app.css
@@ -63,10 +63,14 @@
 }
     .fill-grid{
        position:absolute; 
-       top:45px;
+          top:45px;
        left:0px;
        right:0px; 
        bottom:0px
+    }
+
+    #detailPanels .fill-grid{
+        top:45px;
     }
      .rightPane .hub-no-content-gutter {
     padding-left: 0px;
